# Customer_Support_Agent

./: .env.example  Dockerfile  Makefile  README.md  pyproject.toml
src/agent/: __init__.py
src/agent/api/: app.py
src/agent/api/middleware/: auth.py
src/agent/api/routers/: chat.py  health.py
src/agent/chains/: __init__.py  enrichment_chain.py  response_chain.py
src/agent/chains/prompts/: compose_response.j2  enrich_query.j2
src/agent/core/: __init__.py  config.py  exceptions.py  logging.py
src/agent/graph/: __init__.py  builder.py  checkpointer.py  state.py
src/agent/graph/nodes/: __init__.py  compose_response.py  create_ticket.py  enrich_query.py  faq_lookup.py  route_priority.py
src/agent/guardrails/: __init__.py  input_guard.py  output_guard.py  rules.py
src/agent/observability/: __init__.py  feedback.py  tracing.py
src/agent/schemas/: __init__.py  enriched.py  input.py  state.py  tools.py
src/agent/tools/: __init__.py  faq.py  registry.py  ticketing.py
tests/: test_guardrails.py
